--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,22 @@
+spring:
+  #  datasource:
+  #    url: jdbc:h2:mem:example-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+  #    platform: h2
+  #    username: sa
+  #    password:
+  #    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
 
 
-ml.required.samples: 5
+ribbon:
+  #  ReadTimeout: 60000
+  #  connection-timeout: 3000
+  eureka:
+    enabled: false
+
 
 learning-service:
   ribbon:
@@ -13,3 +29,7 @@ collector-service:
 validator-service:
   ribbon:
     listOfServers: ${DOCKER_HOST_IP:localhost}:8081
+
+
+
+ml.required.samples: 5
